# vibelens

./: .gitignore  .mcp.json  CLAUDE.md  README.md  USER_MANUAL.md  index.html  pyproject.toml
docs/: SECURITY_GUIDE.md  USECASES.md  USER_MANUAL.md
examples/: ShopeeCrawler.py  ShopeeExtractor.py  TikTok_SDK.py  api_analysis.py  basic.py  course_registration.py  lms_login.py  shopee_products_20260306_094158.csv
extension/: README.md  background.js  devtools.html  devtools.js  devtools_page.html  devtools_page.js  manifest.json  popup.html  popup.js
scripts/: HEXSTRIKE_UPDATE_GUIDE.md  extract_hexstrike_endpoints.py  hexstrike_endpoints.json
vibeengine/: README.md  __init__.py  cli.py  config.py  models.py  smart_filter.py
vibeengine/agent/: __init__.py  service.py  views.py
vibeengine/browser/: __init__.py  controller.py  views.py
vibeengine/fetchers/: __init__.py  base.py  dynamic.py  stealth.py
vibeengine/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
vibeengine/mcp/: __init__.py  dashboard.html  database.py  mcp_server.py  server.py
vibeengine/network/: __init__.py  analyzer.py  interceptor.py
vibeengine/parser/: __init__.py  selector.py
vibeengine/proxy/: __init__.py  rotator.py
vibeengine/security/: __init__.py
vibeengine/skills/: SKILL.md
