[project]
name = "vibelens"
version = "0.2.0"
description = "AI-Powered Browser Automation & API Testing Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "VibeLens Team" }
]
keywords = ["browser", "automation", "ai", "scraping", "api", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cdp-use>=0.2.0",
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "playwright>=1.42.0",
    "openai>=1.12.0",
    "anthropic>=0.25.0",
    "ollama>=0.1.0",
    "parsel>=1.9.0",
    "lxml>=5.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "asyncio>=3.4.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "mcp[cli]>=1.0.0",
    "litellm>=1.40.0",
    "sqlmodel>=0.0.16",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpserver>=1.0.0",
    "ruff>=0.3.0",
    "pyright>=1.1.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
vibelens = "vibeengine.cli:main"
vibelens-mcp = "vibeengine.mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibeengine"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
